--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link href="https://fonts.googleapis.com/css?family=Londrina+Solid|Open+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <link rel="shortcut icon" type="image/png" href="images/ramen.png"/>
     </head>
     <body>
         <!--[if lt IE 7]>
