--- a/index.html
+++ b/index.html
@@ -39,20 +39,40 @@
             <div class="row">
                 <div id="buttons-view" class="col-md-12 userInput"></div>
             </div>
-            <div class="row heading">
+            <!-- <div class="row heading">
                 <div class="col-md-8">
                     <h3>Search Results</h3>
                 </div>
                 <div class="col-md-4">
                     <h3>Favorite Gifs</h3>
                 </div>
-            </div>
+            </div> -->
             <div class="row">
-                <div id="gif-view" class="col-md-8 eachGIF">
-                    <!-- gifs from search go here -->
+                <div class="col-md-8">
+                    <div class="row heading">
+                        <div class="col-md-12"><h3>Search Results</h3></div>
+                    </div>
+                    <div class="row">
+                        <div id="gif-view" class="col-md-12 eachGIF">
+                            <!-- gifs from search go here -->
+                        </div>
+                    </div>
                 </div>
-                <div id="fav-gif-view" class="col-md-4">
-                    <!-- favorite gifs go here -->
+                <div class="col-md-4">
+                    <div class="row heading">
+                        <div class="col-md-12"><h3>Favorite Gifs</h3></div>
+                    </div>
+                    <div class="row">
+                        <div id="fav-gif-view" class="col-md-12">
+                            <!-- favorite gifs go here -->
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div id="load-more" class="col-md-8">
+                            <!-- load more button goes here -->
+                        </div>
+                        <div class="col-md-4"></div>
+                    </div>
                 </div>
             </div>
         </div>
