updates index.html -fixes stylistic looks; updates app.js - functionality of load more btn works!

--- a/index.html
+++ b/index.html
@@ -48,32 +48,32 @@
                 </div>
             </div> -->
             <div class="row">
-                <div class="col-md-8">
-                    <div class="row heading">
-                        <div class="col-md-12"><h3>Search Results</h3></div>
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col heading"><h3>Search Results</h3></div>
                     </div>
                     <div class="row">
-                        <div id="gif-view" class="col-md-12 eachGIF">
+                        <div id="gif-view" class="col eachGIF">
                             <!-- gifs from search go here -->
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="row heading">
-                        <div class="col-md-12"><h3>Favorite Gifs</h3></div>
+                <div class="col-md-6">
+                    <div class="row">
+                        <div class="col heading"><h3>Favorite Gifs</h3></div>
                     </div>
                     <div class="row">
-                        <div id="fav-gif-view" class="col-md-12">
+                        <div id="fav-gif-view" class="col">
                             <!-- favorite gifs go here -->
                         </div>
                     </div>
-                    <div class="row">
-                        <div id="load-more" class="col-md-8">
-                            <!-- load more button goes here -->
-                        </div>
-                        <div class="col-md-4"></div>
-                    </div>
                 </div>
+            </div>
+            <div class="row">
+                <div id="load-more" class="col-md-6">
+                    <!-- load more button goes here -->
+                </div>
+                <div class="col-md-6"></div>
             </div>
         </div>
         
