updates app.js - favoriting works

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <div class="col heading"><h3>Favorite Gifs</h3></div>
                     </div>
                     <div class="row">
-                        <div id="fav-gif-view" class="col">
+                        <div id="fav-gif-view" class="col eachGIF">
                             <!-- favorite gifs go here -->
                         </div>
                     </div>
