--- a/index.html
+++ b/index.html
@@ -39,14 +39,11 @@
             <div class="row">
                 <div id="buttons-view" class="col-md-12 userInput"></div>
             </div>
-            <!-- <div class="row heading">
-                <div class="col-md-8">
-                    <h3>Search Results</h3>
+            <div class="row">
+                <div id="drink" class="col heading">
+                    <!-- random drink from CocktailsDB API goes here -->
                 </div>
-                <div class="col-md-4">
-                    <h3>Favorite Gifs</h3>
-                </div>
-            </div> -->
+            </div>
             <div class="row">
                 <div class="col-md-6">
                     <div class="row">
