updates index.html, style.css, and app.js - styling corrections made to improve responsiveness

--- a/index.html
+++ b/index.html
@@ -40,38 +40,38 @@
                 <div id="buttons-view" class="col-md-12 userInput"></div>
             </div>
             <div class="row">
-                <div id="drink" class="col heading">
+                <div id="drink" class="col-md-12 heading">
                     <!-- random drink from CocktailsDB API goes here -->
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6">
                     <div class="row">
-                        <div class="col heading"><h3>Search Results</h3></div>
+                        <div class="col-md-12 heading"><h3>Search Results</h3></div>
                     </div>
                     <div class="row">
-                        <div id="gif-view" class="col eachGIF">
+                        <div id="gif-view" class="col-md-12 eachGIF">
                             <!-- gifs from search go here -->
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div id="load-more" class="col-md-12">
+                            <!-- load more button goes here -->
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6">
                     <div class="row">
-                        <div class="col heading"><h3>Favorite Gifs</h3></div>
+                        <div class="col-md-12 heading"><h3>Favorite Gifs</h3></div>
                     </div>
                     <div class="row">
-                        <div id="fav-gif-view" class="col eachGIF">
+                        <div id="fav-gif-view" class="col-md-12 eachGIF">
                             <!-- favorite gifs go here -->
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div id="load-more" class="col-md-6">
-                    <!-- load more button goes here -->
-                </div>
-                <div class="col-md-6"></div>
-            </div>
+           
         </div>
         
 
